# OrzAudioCore

./: .gitignore  CMakeLists.txt  CMakePresets.json  Package.swift  README.md  decoder-manifest.json
.github/workflows/: ci.yml  full.yml  release.yml
Docs/: orz-audio-core-extraction.md  orz-audio-core.md
SDK/Web/: decoder-manifest.json  package-lock.json  package.json  tsconfig.json
SDK/Web/src/: index.ts
SDK/Web/test/: audio-core.test.mjs
Sources/OrzAudioKit/: AudioDecoder.swift  DecoderManifest.generated.swift
Sources/OrzAudioKitCXX/: stub_decoders.c
Sources/OrzAudioKitCXX/adplug/: adplug_impl.c  adplug_wrap.cpp
Sources/OrzAudioKitCXX/asap/: asap_impl.c
Sources/OrzAudioKitCXX/bp/: bp_impl.c
Sources/OrzAudioKitCXX/dispatch/: audio_engine.c  build_info.generated.h  decoder_manifest.generated.inc  decoder_registry.h  orz_dispatch.c
Sources/OrzAudioKitCXX/gme/: gme_impl.c
Sources/OrzAudioKitCXX/helpers/: cxx_helpers.cpp
Sources/OrzAudioKitCXX/include/: audio_engine.h  orz_audio_core.h
Sources/OrzAudioKitCXX/midi/: midi_file.h  midi_impl.c
Sources/OrzAudioKitCXX/openmpt/: openmpt_impl.c
Sources/OrzAudioKitCXX/sc68/: sc68_impl.c
Sources/OrzAudioKitCXX/sidplayfp/: sidplayfp_impl.cpp
Sources/OrzAudioKitCXX/uade/: ahx2play-context.patch  ahx2play-reset.patch  ahx_player_data.h  score_data.h  uade_native_ahx.c
Sources/OrzAudioKitCXX/v2m/: v2m_native_impl.cpp  v2m_types.h
Sources/OrzAudioKitCXX/ym6/: lhasa_adapter.c  unlzh_ym.c  ym6_impl.c
Sources/OrzAudioKitCXX/ym6/lhasa/: lh5_decoder.c  lh_new_decoder.inc
Tests/OrzAudioCoreTests/: AudioCoreTests.swift
Tests/SDK/: abi_consumer.c  abi_consumer.cpp  parallel_conformance.c
Tests/SDK/consumer/: CMakeLists.txt  main.c
cmake/: OrzAudioCoreConfig.cmake.in  orz-audio-core.pc.in
script/: build-native-libs.sh  build-sdk.sh  build-wasm-lite.sh  build-wasm.sh  build-xcframework.sh  check-release-readiness.mjs  export-audio-core.sh  fetch-decoder-sources.sh  generate-decoder-manifest.mjs  generate-release-metadata.mjs  package-sdk.sh  verify-elf-exports.sh
